# GenToolsPackage

./: .gitignore  CMakeLists.txt  CMakePresets.json  DetectArchitecture.cmake  LICENSE.txt  README.md  rootConfig.h.in
.github/workflows/: cmake-multi-platform.yml  release_package.yml  test_verify.yml
ConsoleUIToolkit/: CMakeLists.txt
ConsoleUIToolkit/cmake_config/: ConsoleUIToolkit.pc.in  ConsoleUIToolkit_Config.cmake.in
ConsoleUIToolkit/include/: ConsolePage.h  ConsoleUIManager.h  DisplayField.h  InputInteraction.h  NavigationInteraction.h  PageCollection.h
ConsoleUIToolkit/src/: ConsolePage.cpp  ConsoleUIManager.cpp  InputInteraction.cpp  NavigationInteraction.cpp  PageCollection.cpp
GenParse/: CMakeLists.txt
GenParse/GenParseBase/: CMakeLists.txt
GenParse/GenParseBase/include/: Flag.h  flag_argument.h  flag_argument_specializations.h  flag_event.h  parse_functions.h
GenParse/GenParseBase/src/: Flag.cpp  parse_functions.cpp
GenParse/GenParseBase/tests/: CMakeLists.txt
GenParse/GenParseBase/tests/unit/flag/: unit_Flag.cpp
GenParse/GenParseBase/tests/unit/flag_aggregate/: unit_flag_argument_t_specializations.cpp  unit_flag_event_t.cpp  unit_flag_pointer_t_specializations.cpp
GenParse/GenParseBase/tests/unit/parse_functions/: unit_OneZeroToBool.cpp  unit_ParseDouble.cpp  unit_ParseFloat.cpp  unit_ParseInt32.cpp  unit_ParseInt64.cpp  unit_ParseLongDouble.cpp  unit_ParseStringDelimited.cpp  unit_ParseUInt32.cpp  unit_ParseUInt64.cpp  unit_StringToBool.cpp  unit_TFToBool.cpp  unit_TrueFalseToBool.cpp  unit_YesNoToBool.cpp
GenParse/GenParseCmdLine/: CMakeLists.txt
GenParse/GenParseCmdLine/include/: CmdLineParser.h  common_definitions.h
GenParse/GenParseCmdLine/include/FlagDerivedTypes/: BranchFlag.h  ListFlag.h  SwitchFlag.h  TriggerFlag.h  TriggerSwitch.h
GenParse/GenParseCmdLine/tests/: CMakeLists.txt
GenParse/GenParseCmdLine/tests/unit/FlagDerivedTypes/: unit_BranchFlag.cpp  unit_ListFlag.cpp
GenParse/cmake_config/: GenParse.pc.in  GenParse_Config.cmake.in
GenSerialize/: CMakeLists.txt
GenSerialize/ASTParser/include/: ASTParser.h
GenSerialize/ASTParser/src/: ASTParser.cpp
GenSerialize/CodeGenerator/include/: CodeGenerator.h  GeneratedCode.h
GenSerialize/CodeGenerator/src/: CodeGenerator.cpp
GenSerialize/FileFormatRegistry/include/: FileFormatRegistry.h
GenSerialize/FileFormatRegistry/src/: FileFormatRegistry.cpp
GenSerialize/FileValidator/include/: FileValidator.h
GenSerialize/FileValidator/src/: FileValidator.cpp
GenSerialize/GeneratedFileManager/include/: GeneratedFileManager.h
GenSerialize/GeneratedFileManager/src/: GeneratedFileManager.cpp
GenSerialize/PluginInterface/include/: DynamicPluginLoader.h  IFormatPlugin.h
GenSerialize/PluginInterface/src/: DynamicPluginLoader.cpp
GenSerialize/Plugins/include/: IFormatPlugin.h
GenSerialize/SAST/include/: SAST.h
GenSerialize/SASTGeneratorAction/include/: SASTGeneratorAction.h
GenSerialize/SASTGeneratorAction/src/: SASTGeneratorAction.cpp
GenSerialize/SASTGeneratorActionFactory/include/: SASTGeneratorActionFactory.h
GenSerialize/SASTGeneratorActionFactory/src/: SASTGeneratorActionFactory.cpp
GenSerialize/SASTLinker/include/: SASTLinker.h
GenSerialize/SASTLinker/src/: SASTLinker.cpp
GenSerialize/SerializationMacros/include/: Macros.h  SerializationMacros.h
GenSerialize/StandardPlugins/: CMakeLists.txt
GenSerialize/StandardPlugins/JSON/: CMakeLists.txt
GenSerialize/StandardPlugins/JSON/JSONParser/include/: JSONArray.h  JSONObject.h  JSONStructure.h  JSONValue.h  StringifyValue.h
GenSerialize/StandardPlugins/JSON/JSONParser/inl/: JSONArray.inl  JSONObject.inl  JSONStructure.inl  JSONValue.inl
GenSerialize/StandardPlugins/JSON/JSONParser/src/: JSONArray.cpp  JSONObject.cpp  StringifyValue.cpp
GenSerialize/StandardPlugins/JSON/JSONParser/tests/: CMakeLists.txt
GenSerialize/StandardPlugins/JSON/JSONParser/tests/unit/: unit_JSONStructure.cpp
GenSerialize/StandardPlugins/JSON/cmake_config/: JSON_FormatPlugin.pc.in  JSON_FormatPlugin_Config.cmake.in
GenSerialize/StandardPlugins/JSON/include/: JSONFormatPlugin.h
GenSerialize/StandardPlugins/JSON/src/: JSONFormatPlugin.cpp
GenSerialize/StandardPlugins/JSON/tests/: CMakeLists.txt
GenSerialize/StandardPlugins/JSON/tests/unit/: unit_JSONFormatPlugin.cpp
GenSerialize/cmake_config/: GenSerialize.pc.in  GenSerialize_Config.cmake.in
GenSerialize/src/: main.cpp
GenSerialize/tests/: CMakeLists.txt
GenSerialize/tests/integration/: integration_GenSerialize.cpp  integration_GenSerializeDynamicPlugin.cpp
GenSerialize/tests/integration/DriverTestFiles/: MultipleMarkedTypes.h  NestedType1.h  NestedType2.h  PODType1.h  PODType2.h  SimpleType.h
GenSerialize/tests/unit/: unit_SASTGeneratorAction.cpp  unit_SASTGeneratorActionFactory.cpp
cmake/presets/: ClangLinuxPresets.json  ClangWindowsPresets.json  GCCLinuxPresets.json  MSVCWindowsPresets.json
cmake_config/: GenToolsPackage.pc.in  GenToolsPackage_Config.cmake.in
cmake_config/presets/: ClangLinuxPresets.json  ClangWindowsPresets.json  GCCLinuxPresets.json  MSVCWindowsPresets.json
cmake_config/scripts/: build_clang.py
config_templates/include/: PlatformInterface.h.in  (+1 more)
include/: Flag.h  ParseFunctions.h  Parser.h  flag_argument.h  flag_argument_specializations.h  flag_event.h  parse_functions.h
src/: BranchFlag.cpp  BranchSwitch.cpp  Flag.cpp  SwitchFlag.cpp  TriggerFlag.cpp  TriggerSwitch.cpp  parse_functions.cpp
tests/: CMakeLists.txt
tests/unit/Flag/Flag/: unit_Flag.cpp
tests/unit/Flag/Flag/FlagDerivedTypes/: unit_BranchFlag.cpp
tests/unit/Flag/flag_aggregate/: unit_flag_argument_t_specializations.cpp  unit_flag_pointer_t_specializations.cpp
tests/unit/Flag/parse_functions/: unit_OneZeroToBool.cpp  unit_ParseDouble.cpp  unit_ParseFloat.cpp  unit_ParseInt32.cpp  unit_ParseInt64.cpp  unit_ParseLongDouble.cpp  unit_ParseString.cpp  unit_ParseStringDelimited.cpp  unit_ParseStringDilimited.cpp  unit_ParseUInt32.cpp  unit_ParseUInt64.cpp  unit_StringToBool.cpp  unit_TFToBool.cpp  unit_TrueFalseToBool.cpp  unit_YesNoToBool.cpp
(+27 files in other folders)
